Source/Modules/ada/swig_binding/doh/dohs-binding.ads


   pragma Import (C, DohCheck, "DohCheck");
   pragma Import (C, DohIntern, "DohIntern");
   pragma Import (C, DohDelete, "DohDelete");
   pragma Import (C, DohCopy, "DohCopy");
   pragma Import (C, DohClear, "DohClear");
   pragma Import (C, DohStr, "DohStr");
   pragma Import (C, DohData, "DohData");
   pragma Import (C, DohDump, "DohDump");
   pragma Import (C, DohLen, "DohLen");
   pragma Import (C, DohHashval, "DohHashval");
   pragma Import (C, DohCmp, "DohCmp");
   pragma Import (C, DohEqual, "DohEqual");
   pragma Import (C, DohIncref, "DohIncref");
   pragma Import (C, DohGetattr, "DohGetattr");
   pragma Import (C, DohSetattr, "DohSetattr");
   pragma Import (C, DohDelattr, "DohDelattr");
   pragma Import (C, DohCheckattr, "DohCheckattr");
   pragma Import (C, DohKeys, "DohKeys");
   pragma Import (C, DohGetInt, "DohGetInt");
   pragma Import (C, DohSetInt, "DohSetInt");
   pragma Import (C, DohGetDouble, "DohGetDouble");
   pragma Import (C, DohSetDouble, "DohSetDouble");
   pragma Import (C, DohGetChar, "DohGetChar");
   pragma Import (C, DohSetChar, "DohSetChar");
   pragma Import (C, DohGetFlagAttr, "DohGetFlagAttr");
   pragma Import (C, DohGetFlag, "DohGetFlag");
   pragma Import (C, DohSetFlagAttr, "DohSetFlagAttr");
   pragma Import (C, DohSetFlag, "DohSetFlag");
   pragma Import (C, DohGetVoid, "DohGetVoid");
   pragma Import (C, DohSetVoid, "DohSetVoid");
   pragma Import (C, DohGetitem, "DohGetitem");
   pragma Import (C, DohSetitem, "DohSetitem");
   pragma Import (C, DohDelitem, "DohDelitem");
   pragma Import (C, DohInsertitem, "DohInsertitem");
   pragma Import (C, DohDelslice, "DohDelslice");
   pragma Import (C, DohWrite, "DohWrite");
   pragma Import (C, DohRead, "DohRead");
   pragma Import (C, DohSeek, "DohSeek");
   pragma Import (C, DohTell, "DohTell");
   pragma Import (C, DohGetc, "DohGetc");
   pragma Import (C, DohPutc, "DohPutc");
   pragma Import (C, DohUngetc, "DohUngetc");
   pragma Import (C, DohFirst, "DohFirst");
   pragma Import (C, DohNext, "DohNext");
   pragma Import (C, DohGetline, "DohGetline");
   pragma Import (C, DohSetline, "DohSetline");
   pragma Import (C, DohGetfile, "DohGetfile");
   pragma Import (C, DohSetfile, "DohSetfile");
   pragma Import (C, DohReplace, "DohReplace");
   pragma Import (C, DohChop, "DohChop");
   pragma Import (C, DohGetmeta, "DohGetmeta");
   pragma Import (C, DohSetmeta, "DohSetmeta");
   pragma Import (C, DohDelmeta, "DohDelmeta");
   pragma Import (C, DohPrintf, "DohPrintf");
   pragma Import (C, DohPrintv, "DohPrintv");
   pragma Import (C, DohReadline, "DohReadline");
   pragma Import (C, DohIsMapping, "DohIsMapping");
   pragma Import (C, DohIsSequence, "DohIsSequence");
   pragma Import (C, DohIsString, "DohIsString");
   pragma Import (C, DohIsFile, "DohIsFile");
   pragma Import (C, DohSetMaxHashExpand, "DohSetMaxHashExpand");
   pragma Import (C, DohGetMaxHashExpand, "DohGetMaxHashExpand");
   pragma Import (C, DohSetmark, "DohSetmark");
   pragma Import (C, DohGetmark, "DohGetmark");
   pragma Import (C, DohNewStringEmpty, "DohNewStringEmpty");
   pragma Import (C, DohNewString, "DohNewString");
   pragma Import (C, DohNewStringWithSize, "DohNewStringWithSize");
   pragma Import (C, DohNewStringf, "DohNewStringf");
   pragma Import (C, DohStrcmp, "DohStrcmp");
   pragma Import (C, DohStrncmp, "DohStrncmp");
   pragma Import (C, DohStrstr, "DohStrstr");
   pragma Import (C, DohStrchr, "DohStrchr");
   pragma Import (C, DohNewFile, "DohNewFile");
   pragma Import (C, DohNewFileFromFd, "DohNewFileFromFd");
   pragma Import (C, DohFileErrorDisplay, "DohFileErrorDisplay");
   pragma Import (C, DohCopyto, "DohCopyto");
   pragma Import (C, DohNewList, "DohNewList");
   pragma Import (C, DohNewHash, "DohNewHash");
   pragma Import (C, DohSplit, "DohSplit");
   pragma Import (C, DohSplitLines, "DohSplitLines");
   pragma Import (C, DohMemoryDebug, "DohMemoryDebug");
   pragma Import (C, doh_Copy, "doh_Copy");
   pragma Import (C, doh_First, "doh_First");
   pragma Import (C, doh_Next, "doh_Next");
   pragma Import (C, get_Item, "get_Item");

end DOHs.Binding;
